# sm750-debug

./: README.md  urls
1.3.0/: con2fb  release.txt  ufb_hw750.c
1.3.0/ddk/: ddk750_intern.h  ddk_2d.c  ddk_chip.c  ddk_display.c  ddk_hwi2c.c
16.04_driver/42828/: .lynx_drv.o.cmd  .lynx_hw502.o.cmd  .lynxfb.ko.cmd  .lynxfb.o.cmd  Makefile  Module.symvers  lynx_cursor.c  lynx_hw712.h  lynxfb.ko  lynxfb.mod.c  modules.order  ver.h
16.04_driver/42828/.svn/: wc.db
16.04_driver/42828/ddk712/: .ddk712_mode.o.cmd  ddk712_chip.c  ddk712_help.c  ddk712_mode.h
16.04_driver/42828/ddk750/: .ddk750_chip.o.cmd  .ddk750_dvi.o.cmd  .ddk750_sii164.o.cmd  .ddk750_swi2c.o.cmd  ddk750_display.h  ddk750_edid.c  ddk750_hwi2c.c
LynxUSB xorg driver v1.0.4/: readme.txt
LynxUSB xorg driver v1.0.4/ubuntu1404x32/: install.clone  install.dual  smi_drv.so.clone  smi_drv.so.dual  xorg.conf.clone  xorg.conf.dual
LynxUSB xorg driver v1.0.4/ubuntu1404x32/kernelsrc/: Makefile  Rpcie.h  ufb_hw750.c  usbfb.c
LynxUSB xorg driver v1.0.4/ubuntu1404x32/kernelsrc/ddk/: ddk_hwi2c.c
LynxUSB xorg driver v1.0.4/ubuntu1404x64/: smi_drv.so.clone  smi_drv.so.dual
LynxUSB xorg driver v1.0.4/ubuntu1404x64/kernelsrc/: release.txt  ufb_cmd.h  ufb_drv.h
LynxUSB xorg driver v1.0.4/ubuntu1604x32/: smi_drv.so.clone  smi_drv.so.dual
LynxUSB xorg driver v1.0.4/ubuntu1604x32/kernelsrc/: con2fb.c  readme  ufb_hw750.h
LynxUSB xorg driver v1.0.4/ubuntu1604x32/kernelsrc/ddk/: ddk750_common.h  ddk750_type.h  siHdmiTx_902x_TPI.h
LynxUSB xorg driver v1.0.4/ubuntu1604x64/: install.clone  install.dual  smi_drv.so.clone  smi_drv.so.dual  xorg.conf.clone
LynxUSB xorg driver v1.0.4/ubuntu1604x64/kernelsrc/: .ufb.ko.cmd  .ufb.mod.o.cmd  .ufb.o.cmd  .ufb_hw750.o.cmd  .usbacc.o.cmd  .usbfb.o.cmd  Usb3382.h  modules.order  ufb.ko  ufb.mod.c  usbfb.h
LynxUSB xorg driver v1.0.4/ubuntu1604x64/kernelsrc/.tmp_versions/: ufb.mod
LynxUSB xorg driver v1.0.4/ubuntu1604x64/kernelsrc/ddk/: .ddk_2d.o.cmd  .ddk_chip.o.cmd  .ddk_display.o.cmd  .ddk_dvi.o.cmd  .ddk_hwi2c.o.cmd  .ddk_mode.o.cmd  .ddk_power.o.cmd  .ddk_sii164.o.cmd  .ddk_sii9022.o.cmd  .ddk_swi2c.o.cmd  .edid.o.cmd  .siHdmiTx_902x_TPI.o.cmd  ddk750_regs.h  ddk_dvi.c  ddk_sii164.c  ddk_swi2c.c  edid.c  edid.h
driver/Kernel/v1_0_7/QA_Report/: SM750&718 Kernel Display Report.xls
driver/Kernel/v1_0_7/Src/: readme.txt
driver/XRandR/v3_0_9/src/: README
driver/XRandR/v3_0_9/src/src/750DDK/: Makefile.am
driver/XRandR/v3_0_9/src/src/750DDK/libsrc/: 2d.c  2d.h  alpha.c  alpha.h  at25f512.c  bitmap.c  capture.h  csc.c  ddkdebug.c  ddkdebug.h  deint.c  deint.h  dispint.h  dma.h  dvi.c  dvi.h  dviint.c  edid.c  font.c  gpioint.c  hardware.h  hwi2c.h  intr.h  linux.c  mode.h  newtstpic.c  os.c  os.h  saa7118.c  saa7118.h  sii164.c  ssp.h  sw2d.c  sw2d.h  swi2c.h  valpha.h  vcoder.c  video.c  watcom.c
driver/XRandR/v3_0_9/src/src/750DDK/regdef/: regdc.h  regde.h  regdma.h  regpwm.h  regssp.h
driver/xorg/v2_4_3/: Release.txt
logs/: dmesg  lshw  lspci -v  lsusb -v  requested-commands  syslog-plug-in
logs/3.13.0-85-generic/: make
logs/4.4.0-22-generic/: dev  dmesg  kernel  lshw  lspci  lsusb
logs/sm750fb-driver/: make
old/1.3.0/: plx.h  ufb_cmd.h  ufb_hw750.h  usbfb.c
old/1.3.0/.svn/: wc.db
old/1.3.0/ddk/: ddk_power.c  ddk_sii9022.c
old/16.04_driver/42828/: .lynx_accel.o.cmd  .lynx_cursor.o.cmd  .lynx_hw712.o.cmd  .lynx_hw750.o.cmd  .lynxfb.mod.o.cmd  Release.txt  auto  con2fb.c  lynx_drv.h  modedb.c  voyager.h
(+141 files in other folders)
